# anna_ivanovna

./: .env  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  build.rs
ai-app/: Cargo.toml
ai-app/src/: api.rs  lib.rs  migration.rs  storage.rs
ai-app/src/config/: error.rs  mod.rs
ai-app/src/snapshots/: ai_app__api__tests__create_plan_already_exists.snap  ai_app__api__tests__create_plan_invalid_too_big_expenses.snap  ai_app__api__tests__create_plan_ok.snap  ai_app__api__tests__update_plan_invalid.snap  ai_app__api__tests__update_plan_no_existing.snap  ai_app__api__tests__update_plan_ok.snap
ai-core/: Cargo.toml
ai-core/src/: api.rs  basic_draft.rs  distribute.rs  editor.rs  finance.rs  lib.rs  mod.rs  plan.rs  planning.rs  templates.rs
ai-core/src/planning/: expense.rs  income.rs  mod.rs  tests.rs
ai-core/src/planning/snapshots/: ai_core__planning__tests__credit_expense_valid_creation.snap  ai_core__planning__tests__serde_credit_expense_roundtrip.snap  ai_core__planning__tests__serde_envelope_expense_roundtrip.snap  ai_core__planning__tests__serde_expense_backward_compat_no_kind.snap
ai-core/tests/: templates_test.rs
backend/: Cargo.toml
backend/migrations/: 20260310000001_init.sql
backend/src/: cli.rs  lib.rs  main.rs  storage.rs
backend/src/infra/: config.rs  logging.rs
backend/src/interfaces/: excel_parser.rs  mod.rs  presentation.rs  tree.rs  web.rs
backend/src/storage/: fs.rs  sqlite.rs
backend/src/test_storage/: result.json
example/: plan.yaml
frontend/: Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/docs/: arch.md
frontend/src/: api.rs  app.rs  config.rs  lib.rs  tauri_ipc.rs
frontend/src/api/: client.rs  error.rs  mod.rs  types.rs
frontend/src/app/: history.rs  onboarding.rs  plan.rs  view.rs
frontend/src/components/: app_layout.rs  history.rs  icons.rs  income_modal.rs  mod.rs  plan.rs  template_selector.rs  theme_switcher.rs  welcome.rs
frontend/src/components/plan/: expense_card.rs  expense_categories.rs  expenses_editor.rs  income_sources.rs  income_sources_editor.rs  mod.rs  plan_edit_layout.rs  totals.rs  view.rs
frontend/src/engine/: core.rs  history.rs  mod.rs  onboarding.rs
frontend/src/engine/app/: cmd.rs  model.rs  msg.rs  update.rs
frontend/src/engine/plan/: cmd.rs  editable.rs  mod.rs  model.rs  msg.rs  update.rs  view_model.rs
frontend/src/engine/plan/update/: rebuild.rs  validate.rs
frontend/src/presentation/: editable_plan.rs  formatting.rs  history.rs  income.rs  mod.rs  plan.rs
frontend/src/presentation/components/: app_layout.rs  error.rs  history.rs  income_modal.rs  loading.rs  mod.rs  theme_switcher.rs
frontend/src/presentation/components/plan/: expense_card.rs  expense_categories.rs  expenses_editor.rs  income_sources.rs  income_sources_editor.rs  mod.rs  plan_edit_actions_bar.rs  plan_edit_layout.rs  plan_section_card.rs  view.rs
frontend/src/presentation/plan/: editable.rs  mod.rs  read.rs
frontend/src/runtime/: history.rs  mod.rs  onboarding.rs  plan.rs  view.rs
frontend/stories/creating/rejected_422/: 002_create_rejected.json
frontend/stories/creating/save_ok/: case.md
frontend/stories/creating/server_error/: 002_server_error.json  case.md
frontend/stories/editing/change_expenses/: 001_change_expenses.json  case.md
frontend/stories/editing/change_incomes/: case.md
frontend/stories/editing/enter_and_cancel/: 001_enter.json  initial.json  result.snap
frontend/stories/editing/rejected_422/: 002_save_rejected.json  result.snap
frontend/stories/editing/server_error/: case.md
frontend/stories/history/error/: 001_error.json  case.md  initial.json  result.snap
frontend/stories/history/load/: 001_loaded.json  case.md  result.snap
frontend/stories/history/load_more/: 001_load.json  002_loaded.json  case.md  initial.json  result.snap
frontend/stories/loading/error/: case.md
frontend/stories/loading/not_found/: case.md  result.snap
frontend/stories/loading/success/: 001_plan_loaded.json  result.snap
frontend/stories/onboarding/pick_folder/: 001_picked.json  case.md  result.snap
frontend/stories/onboarding/ready/: 001_resolved.json  case.md  initial.json  result.snap
frontend/stories/onboarding/setup_complete/: 002_finished.json  case.md  result.snap
frontend/stories/onboarding/setup_error/: 001_complete.json  002_error.json  case.md  initial.json  result.snap
frontend/stories/plan/creating/rejected_422/: case.md  result.snap
frontend/stories/plan/creating/save_ok/: result.snap
frontend/stories/plan/creating/server_error/: initial.json  result.snap
frontend/stories/plan/editing/change_expenses/: result.snap
frontend/stories/plan/editing/change_incomes/: result.snap
frontend/stories/plan/editing/enter_and_cancel/: 002_cancel.json  case.md  result.snap
frontend/stories/plan/editing/rejected_422/: case.md  initial.json
frontend/stories/plan/editing/save_ok/: 002_save_finished.json  case.md  result.snap
frontend/stories/plan/editing/server_error/: 001_save.json  002_server_error.json  config.toml  result.snap
frontend/stories/plan/loading/error/: 001_server_error.json  result.snap
frontend/stories/plan/loading/reload/: 001_reload.json  case.md  result.snap
frontend/stories/plan/loading/success/: case.md  initial.json  result.snap
frontend/stories/smoke/edit_existing/: case.md  result.snap
frontend/stories/smoke/new_user/: 003_select_template.json  case.md
frontend/stories/templates/back/: result.snap
frontend/stories/templates/error/: 001_templates_error.json  initial.json
frontend/stories/templates/from_scratch/: 001_from_scratch.json  initial.json
frontend/stories/templates/loaded/: case.md
frontend/stories/templates/select/: case.md  result.snap
frontend/tests/: plan_stories.rs  stories.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: settings.html
src-tauri/capabilities/: settings.json
src-tauri/defaults/: config.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs
(+60 files in other folders)
