[package]
name = "anna_ivanovna"
description = "Планировщик бюджета"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kireevys/anna_ivanovna"
authors = ["github.com/kireevys"]

[package.metadata]
pre-commit = "cargo clippy --all-targets --all-features -- -W clippy::style -D clippy::perf -D warnings"

[package.metadata.release]
tag = true                      # создаёт тег при релизе
tag-name = "v{{version}}"       # шаблон названия тега
push = true                     # пушит изменения и тег
publish = false                 # не публикует в crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.37"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal_macros = "1.37"
uuid = { version = "1.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
homedir = "0.3"
dirs = "5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
