[workspace]
members = ["backend", "ai-core", "frontend"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/kireevys/anna_ivanovna"
authors = ["github.com/kireevys"]

[workspace.metadata]
pre-commit = "cargo clippy --all-targets --all-features -- -W clippy::style -D clippy::perf -D warnings"

[workspace.metadata.release]
tag = true                # создаёт тег при релизе
tag-name = "v{{version}}" # шаблон названия тега
push = true               # пушит изменения и тег
publish = false
