[package]
name = "ai_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ai_core = { path = "../ai-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
uuid = { version = "1.8", features = ["v7"] }
