[package]
name = "ai_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rust_decimal = "1.37"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal_macros = "1.37"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0.12"
tracing-subscriber = "0.3"

[dev-dependencies]
rstest = "0.26.1"
