[package]
name = "ai_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rstest = "0.26.1"
