[package]
name = "anna_ivanovna"
description = "Планировщик бюджета"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
metadata.release.wokspace = true

[dependencies]
rust_decimal = "1.37"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal_macros = "1.37"
uuid = { version = "1.8", features = ["serde", "v4", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
homedir = "0.3"
dirs = "6"
ratatui = "0.29"
crossterm = "0.29"
tracing = "0.1"
thiserror = "2.0.12"
tracing-subscriber = "0.3"
rand = "0.9.1"
csv = "1.3.1"
axum = { version = "0.8.7", features = ["tracing"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace", "tracing", "cors"] }
ai_core = { path = "../ai-core" }

[dev-dependencies]
rstest = "0.26.1"
