[package]
name = "anna_ivanovna"
description = "Планировщик бюджета"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
metadata.release.wokspace = true

[dependencies]
ai_core = { path = "../ai-core" }
axum = { version = "0.8.7", features = ["tracing"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
csv = "1.3.1"
dirs = "6"
homedir = "0.3"
rand = "0.9.1"
ratatui = "0.29"
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace", "tracing", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["serde", "v4", "v7"] }

[dev-dependencies]
rstest = "0.26.1"
