[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
tauri = []

[dependencies]
ai_core = { path = "../ai-core" }
chrono = { version = "0.4.42", features = ["serde"] }
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
once_cell = "1.20"
rust_decimal = "1.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
